manifests/speech-to-text-dev/resources/redis-insight-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-insight-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-internal

spec:
  ingressClassName: nginx-internal
  rules:
    - host: redis-inisghts-latest.privatelink.francecentral.azmk8s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-stack
                port:
                  number: 8001
